--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,12 +11,12 @@
       <section id="about">
         {% include about.html %}
       </section>
-	  <section id="professors">
+	    <section id="professors">
         {% include professors.html %}
       </section>
-      <section id="members">
+      <!-- <section id="members">
         {% include members.html %}
-      </section>
+      </section> -->
       <section id="publications">
 		{% include publications.html %}
       </section>
